--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,12 +13,12 @@ source:
 
 build:
   number: 1001
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python -m pip install . --no-deps --ignore-installed -vvv
 
 requirements:
   build:
   - python
-  - setuptools
+  - pip
   run:
   - python
   - psyplot
