add scipy as run dependency
as this is required for plotting with cartopy

see https://github.com/psyplot/psy-maps/pull/29

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - {{ pin_compatible('psyplot', max_pin='x.x') }}
     - {{ pin_compatible('psy-simple', max_pin='x.x') }}
     - cartopy
+    - scipy
 
 test:
   imports:
