--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,8 @@ source:
 
 build:
   number: 0
-  script: python -m pip install . --no-deps --ignore-installed -vvv
-  skip: true  # [py == 36]
+  skip: true  # [py<39]
+  script: {{ PYTHON }} -m pip install . --no-deps -vvv
 
 requirements:
   build:
@@ -24,30 +24,33 @@ requirements:
   host:
     - python
     - pip
+    - setuptools
+    - versioneer
+    - tomli
   run:
     - python
-    - {{ pin_compatible('psy-simple', max_pin='x.x') }}
+    - {{ pin_compatible('psy-simple', max_pin='x.x', lower_bound='1.5.0') }}
     - cartopy
     - scipy
 
 test:
   imports:
     - psy_maps
+    - psy_maps.plotters
 
 about:
-  home: https://github.com/psyplot/psy-maps
+  home: https://codebase.helmholtz.cloud/psyplot/psy-maps
   license: LGPL-3.0-only
   license_family: GPL
   license_file:
-    - COPYING
-    - COPYING.LESSER
+    - LICENSES/
   summary: Psyplot plugin for visualization on a map
 
   description: |
     This psyplot plugin uses the cartopy package to visualize geo-referenced
     data on a map
   doc_url: https://psyplot.github.io/psy-maps
-  dev_url: https://github.com/psyplot/psy-maps
+  dev_url: https://codebase.helmholtz.cloud/psyplot/psy-maps
 
 extra:
   recipe-maintainers:
